--- a/emails/example/example.html
+++ b/emails/example/example.html
@@ -1,18 +1,21 @@
-   <title>title</title>
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-         <meta content="IE=7, IE=9" http-equiv="X-UA-Compatible">
-            <link rel="stylesheet" type="text/css" href="../common/bootstrap.css">
-               <link rel="stylesheet" type="text/css" href="./test.css">
-             </head>
-             <body>
-               <div class="wrapper">
-                    <div class="container">
-                             <div class="header">
-                                          <h1 class="title"> Very interesting header </h1>
-                                                     <span class="subtitle"> amazing subtitle </span>
-                                                            </div>
-                                                                   <div class="description"> <p>Your text!</p> </div>
-                                                                      </div>
-                                                                    </div>
-                                                                  </body>
-                                                                </html>
+<html>
+  <head>
+    <title>title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta content="IE=7, IE=9" http-equiv="X-UA-Compatible">
+    <link rel="stylesheet" type="text/css" href="./example.css">
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="container">
+        <div class="header">
+          <h1 class="title">What header</h1>
+          <span class="subtitle">Very subtitle</span>
+        </div>
+        <div class="description">
+          <p>Wow!</p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
